Revisado o fluxo das embalagens retornaveis.

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -340,32 +340,33 @@ fieldset#MCMDescription {
 
                             <div id="Comprados" class="Comprados_nvis"><br>
                                 <select name="tComprados" id="cComprados" class="botao_select">
-                                    <option value="" style="display: none;"></option>
-                                    <option value="GSCM_001" selected>COMPRADOS: Absorption Materials - Cold End</option>
-                                    <option value="GSCM_002">COMPRADOS: Hangers</option>
-                                    <option value="GSCM_003">COMPRADOS: Hot End Insulation</option>
-                                    <option value="GSCM_004">COMPRADOS: Support Mats</option>
-                                    <option value="GSCM_005">COMPRADOS: Wire Mesh</option>
-                                    <option value="GSCM_006">COMPRADOS: OE Monoliths</option>
-                                    <option value="GSCM_007">COMPRADOS: Stainless Steel</option>
-                                    <option value="GSCM_008">COMPRADOS: Steel / Aluminized Carbon Steel</option>
-                                    <option value="GSCM_009">COMPRADOS: Tubing / Stainless Straight Tube</option>
-                                    <option value="GSCM_010">COMPRADOS: ICY</option>
-                                    <option value="GSCM_011">COMPRADOS: Welding Wire</option>
-                                    <option value="GSCM_012">COMPRADOS: Manipulated Pipes (Nacional)</option>
-                                    <option value="GSCM_013">COMPRADOS: Stampings (Nacional)</option>
-                                    <option value="GSCM_014">COMPRADOS: Bosses</option>
-                                    <option value="GSCM_015">COMPRADOS: Castings</option>
-                                    <option value="GSCM_016">COMPRADOS: Clamps</option>
-                                    <option value="GSCM_017">COMPRADOS: Cold Headings / Fasteners</option>
-                                    <option value="GSCM_018">COMPRADOS: Flex Couplings</option>
-                                    <option value="GSCM_019">COMPRADOS: Gaskets</option>
-                                    <option value="GSCM_020">COMPRADOS: Plastic</option>
-                                    <option value="GSCM_021">COMPRADOS: Packaging & label</option>
-                                    <option value="GSCM_022">COMPRADOS: Rubber Components</option>
-                                    <option value="GSCM_023">COMPRADOS: Hydroforming</option>
-                                    <option value="GSCM_024">COMPRADOS: Manipulated Pipes(Importado)</option>
-                                    <option value="GSCM_025">COMPRADOS: Stampings(Importado)</option>
+                                    <option value="" style="display:none;"></option>
+                           <option value="GSCM_001" selected>COMPRADOS: Material absorsivo, fibra de vidro</option>
+                                    <option value="GSCM_002">COMPRADOS: Ganchos, suportes tubular (hangers)</option>
+                                    <option value="GSCM_003">COMPRADOS: Manta térmica</option>
+                                    <option value="GSCM_004">COMPRADOS: Suporte do catalisador (Support Mats)</option>
+                                    <option value="GSCM_005">COMPRADOS: Malha de aço (wire mesh)</option>
+                                    <option value="GSCM_006">COMPRADOS: Catalisadores</option>
+                                    <option value="GSCM_007">COMPRADOS: MP - Chapas e bobinas em Aço inox</option>
+                                    <option value="GSCM_008">COMPRADOS: MP - Aço aluminizado e carbono</option>
+                                    <option value="GSCM_009">COMPRADOS: MP - Tubo em inox</option>
+                                    <option value="GSCM_010">COMPRADOS: ICY (Outras Tenneco)</option>
+                                    <option value="GSCM_011">COMPRADOS: Arame de solda</option>
+                                    <option value="GSCM_012">COMPRADOS: Tubo dobrado, estampado, furado (Nacional)</option>
+                                    <option value="GSCM_013">COMPRADOS: Estampados (Nacional)</option>
+                                    <option value="GSCM_014">COMPRADOS: Conector do sensor (microfundido)</option>
+                                    <option value="GSCM_015">COMPRADOS: Componentes fundidos</option>
+                                    <option value="GSCM_016">COMPRADOS: Abraçadeiras</option>
+                                    <option value="GSCM_017">COMPRADOS: Parafusos, arruelas e porcas</option>
+                                    <option value="GSCM_018">COMPRADOS: Elemento flexível</option>
+                                    <option value="GSCM_019">COMPRADOS: Juntas</option>
+                                    <option value="GSCM_020">COMPRADOS: Plasticos</option>
+                                    <option value="GSCM_021">COMPRADOS: Embalagem retornavel</option>
+                                    <option value="GSCM_022">COMPRADOS: Embalagens e etiquetas</option>
+                                    <option value="GSCM_023">COMPRADOS: Coxins e elementos de borracha</option>
+                                    <option value="GSCM_024">COMPRADOS: Componetes hidroformados</option>
+                                    <option value="GSCM_025">COMPRADOS: Tubo dobrado, estampado, furado (Importado)</option>
+                                    <option value="GSCM_026">COMPRADOS: Estampados (Importado)</option>
 
                                 
 
