Acrescentado classe de avaliação.

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -421,13 +421,13 @@ fieldset#MCMDescription {
                                 <select class="botao_select" name="TipoMM" id="TipoMM" style="width: 443px;">
                                     <option value="" selected style="display: none;">Classe do Material (Comprados).</option>
                                     <optgroup label="COMPRADOS">
-                                        <option value="COMPONENTE CONTA PLENA">COMPONENTE CONTA PLENA</option>
-                                        <option value="COMPONENTE SUBCONTRATADO">COMPONENTE SUBCONTRATADO</option>
-                                        <option value="COMPONENTE DIRECT BUY">COMPONENTE DIRECT BUY</option>
-                                        <option value="COMPONENTE INTERCOMPANY (ICY)">COMPONENTE INTERCOMPANY (ICY)</option>
-                                        <option value="PGM CONSIGNADO (PASSTHROUGH)">PGM CONSIGNADO (PASSTHROUGH)</option>
-                                        <option value="MATERIA PRIMA">MATERIA PRIMA</option>
-                                        <option value="EMBALAGEM">EMBALAGEM</option>
+                                        <option value="COMPONENTE CONTA PLENA - Classe de avaliação 3100">COMPONENTE CONTA PLENA</option>
+                                        <option value="COMPONENTE SUBCONTRATADO - Classe de avaliação 3100">COMPONENTE SUBCONTRATADO</option>
+                                        <option value="COMPONENTE DIRECT BUY - Classe de avaliação 3105">COMPONENTE DIRECT BUY</option>
+                                        <option value="COMPONENTE INTERCOMPANY (ICY) - Classe de avaliação 4005">COMPONENTE INTERCOMPANY (ICY)</option>
+                                        <option value="PGM CONSIGNADO (PASSTHROUGH) - Classe de avaliação 3110">PGM CONSIGNADO (PASSTHROUGH)</option>
+                                        <option value="MATERIA PRIMA - Classe de avaliação 3100">MATERIA PRIMA</option>
+                                        <option value="EMBALAGEM - Classe de avaliação 2250">EMBALAGEM</option>
                                         </optgroup>
                                 </select></div>
                         </fieldset>
