--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -248,7 +248,7 @@ fieldset#MCMDescription {
                     <section id="corpo">
                         <fieldset id="usuario" class="formulario_nok"><legend class="legenda">Identificação do Usuário</legend> 
                             <input type="radio" name="UserID" id="cUserID" checked value="" style="display: none;"/>
-                            <input type="radio" name="UserID" id="radio_COSTAF12" value="COSTAF12"/><label class="legenda-radio" for="radio_COSTAF12">Fabio</label>
+                            <input type="radio" name="UserID" id="radio_RODRPIRE" value="RODRPIRE"/><label class="legenda-radio" for="radio_RODRPIRE">Rodrigo</label>
                             <input type="radio" name="UserID" id="radio_LARICARD" value="LARICARD"/><label class="legenda-radio" for="radio_LARICARD">Larissa</label>
                             <input type="radio" name="UserID" id="radio_MARCSANT" value="MARCSANT"/><label class="legenda-radio" for="radio_MARCSANT">Marcelo</label>
                         </fieldset>
@@ -446,15 +446,13 @@ fieldset#MCMDescription {
             <ul id="tabelaNomeID_nvis">
                 <li id="MARCSANT ">DELETE TASK (Shift + F2)</li>
                 <li id="MARCSANT">MARCELO PUPO</li>
-                <li id="COSTAF12">FABIO COSTA</li>
+                <li id="RODRPIRE">RODRIGO PIRES</li>
                 <li id="LARICARD">LARISSA CARDOSO</li>
                 <li id="JEANFRA1">JEAN FRANCO</li>
                 <li id="MAYCOLIV">MAYCON OLIVEIRA</li>
                 <li id="THIABRIT">THIAGO BRITO</li>
                 <li id="DENICARD">DENILSON CARDOSO</li>
-                <li id="SALAPEDA">SALATYEL PEDAO</li>
                 <li id="NADIDINI">NADIE DINIZ</li>
-                <li id="TULISILV">TULIO SILVA</li>
                 <li id="GRASDASI">GRASIELA SILVA</li>
                 <li id="CLEYALVE">CLEYTON ALVES</li>
                 <li id="CARLMART">CARLOS MARTINS</li>
