--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -272,6 +272,7 @@ fieldset#MCMDescription {
                                 <optgroup label="LV">
                                     <option value="VWL">VOLKSWAGEN</option>
                                     <option value="GMB">GENERAL MOTORS</option>
+                                    <option value="FRD">FORD</option>
                                     <option value="FCA">FIAT</option>
                                     <option value="PSA">PSA</option>
                                     <option value="HPE">HPE</option>
