Atualizado classe de avaliação SAP TA2.

--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -368,9 +368,7 @@ fieldset#MCMDescription {
                                     <option value="GSCM_024">COMPRADOS: Componetes hidroformados</option>
                                     <option value="GSCM_025">COMPRADOS: Tubo dobrado, estampado, furado (Importado)</option>
                                     <option value="GSCM_026">COMPRADOS: Estampados (Importado)</option>
-
-                                
-
+                                    
                                 </select><br>   
                                 <input type="checkbox" id="importados" name="importados">
                                 <label class="legenda-radio" for="importados">IMPORTADO</label>
@@ -422,13 +420,13 @@ fieldset#MCMDescription {
                                 <select class="botao_select" name="TipoMM" id="TipoMM" style="width: 443px;">
                                     <option value="" selected style="display: none;">Classe do Material (Comprados).</option>
                                     <optgroup label="COMPRADOS">
-                                        <option value="COMPONENTE CONTA PLENA - Classe de avaliação 3100">COMPONENTE CONTA PLENA</option>
-                                        <option value="COMPONENTE SUBCONTRATADO - Classe de avaliação 3100">COMPONENTE SUBCONTRATADO</option>
-                                        <option value="COMPONENTE DIRECT BUY - Classe de avaliação 3105">COMPONENTE DIRECT BUY</option>
-                                        <option value="COMPONENTE INTERCOMPANY (ICY) - Classe de avaliação 4005">COMPONENTE INTERCOMPANY (ICY)</option>
-                                        <option value="PGM CONSIGNADO (PASSTHROUGH) - Classe de avaliação 3110">PGM CONSIGNADO (PASSTHROUGH)</option>
-                                        <option value="MATERIA PRIMA - Classe de avaliação 3100">MATERIA PRIMA</option>
-                                        <option value="EMBALAGEM - Classe de avaliação 2250">EMBALAGEM</option>
+                                        <option value="COMPONENTE CONTA PLENA">COMPONENTE CONTA PLENA</option>
+                                        <option value="COMPONENTE SUBCONTRATADO">COMPONENTE SUBCONTRATADO</option>
+                                        <option value="COMPONENTE DIRECT BUY">COMPONENTE DIRECT BUY</option>
+                                        <option value="COMPONENTE INTERCOMPANY (ICY)">COMPONENTE INTERCOMPANY (ICY)</option>
+                                        <option value="PGM CONSIGNADO (PASSTHROUGH)">PGM CONSIGNADO (PASSTHROUGH)</option>
+                                        <option value="MATERIA PRIMA">MATERIA PRIMA</option>
+                                        <option value="EMBALAGEM">EMBALAGEM</option>
                                         </optgroup>
                                 </select></div>
                         </fieldset>
@@ -485,6 +483,7 @@ fieldset#MCMDescription {
                 <li id="CARLSOUS">CARLOS DE SOUSA</li>
                 <li id="SEBAREZE">MAURICIO REZENDE</li>
                 <li id="LUCEPOLL">LUCELIA POLLETTINI</li>
+                <li id="LUCIAE11">ELAINE LUCIANO</li>
                 <li id="X1LUCAS1">LUCAS SOUZA</li>
                 <li id="CELIINNO">CELIA INNOCENTE</li>
                 <li id="GIULSILV">GIULIANO SILVA</li>
