Revisado aprovador PPAP temp.

--- a/sapta2mcm_desc.html
+++ b/sapta2mcm_desc.html
@@ -200,7 +200,7 @@ div.itens-alterados {
 
                 <li class="linha_principal">SAP A101 - TA2</li>
                 
-                <li id="lista-segundo"><a href="sapta2mcm_desc.html" target="_self">ECM - Texto Base</a></li>
+                <!--<li id="lista-segundo"><a href="sapta2mcm_desc.html" target="_self">ECM - Texto Base</a></li>-->
                 <li id="lista-segundo"><a href="sapta2mcm_wf.html" target="_self">ECM - Aprovadores</a></li>
                 <li id="lista-segundo"><a href="sapta2mcm_info.html" target="_self">Procedimentos</a></li>
     
