--- a/sapta2mcm_wf.html
+++ b/sapta2mcm_wf.html
@@ -224,7 +224,7 @@ fieldset#MCMDescription {
 
                     <li class="linha_principal">SAP A101 - TA2</li>
                     
-                    <li id="lista-segundo"><a href="sapta2mcm_desc.html" target="_self">ECM - Texto Base</a></li>
+                    <!--<li id="lista-segundo"><a href="sapta2mcm_desc.html" target="_self">ECM - Texto Base</a></li>-->
                     <li id="lista-segundo"><a href="sapta2mcm_wf.html" target="_self">ECM - Aprovadores</a></li>
                     <li id="lista-segundo"><a href="sapta2mcm_info.html" target="_self">Procedimentos</a></li>
         
@@ -235,7 +235,7 @@ fieldset#MCMDescription {
                     <li id="lista-segundo">Catalisador</li>
                 </ul>
             </nav>
-            <p style="font-size: 9pt;font-style: italic;margin-right: 15px;text-align: right;">Atualizado em 16 de março de 2023<br>Por Marcelo Pupo</p>
+            <p style="font-size: 9pt;font-style: italic;margin-right: 15px;text-align: right;">Atualizado em 8 de dezembro de 2023<br>Por Marcelo Pupo</p>
         </section>
 
         <aside id="lado_direito">
